# clogger

./: .gitignore  CMakeLists.txt
cmake/: CLoggerConfig.cmake.in
include/CLogger/: CChannel.h  CConfig.h  CLog.h  CLogger.h  CManager.h
include/CLogger/CWriters/: CConsoleWriter.h  CFileWriter.h  CSysLogWriter.h  CWriter.h  CWriterFactory.h
src/: CChannel.cpp  CConfig.cpp  CLog.cpp  CLogger.cpp  CManager.cpp
src/CWriters/: CConsoleWriter.cpp  CFileWriter.cpp  CSysLogWriter.cpp  CWriter.cpp  CWriterFactory.cpp
tests/: CMakeLists.txt
tests/src/: test.cpp
